--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,20 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "15.1.3",
+    "axios": "^1.13.2",
+    "next": "^15.5.9",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "axios": "1.7.9"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
-    "typescript": "5.7.2",
-    "tailwindcss": "3.4.17",
-    "postcss": "8.4.49",
     "autoprefixer": "10.4.20",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.3"
+    "eslint": "^9.39.2",
+    "eslint-config-next": "15.1.3",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.7.2"
   }
 }
