--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "aromanize": "^0.1.5",
     "axios": "^1.13.2",
     "next": "^15.5.9",
     "react": "19.0.0",
